College links/photos complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "accusantium",
     "adipisicing",
     "amet",
+    "bccc",
     "consectetur",
     "consequatur",
     "delectus",
@@ -16,10 +17,12 @@
     "ipsam",
     "iste",
     "magnam",
+    "mccc",
     "molestiae",
     "nulla",
     "numericals",
     "odit",
+    "pennstate",
     "perspiciatis",
     "saepe",
     "suscipit",
